sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:16: error: not found: value a
    setValeur(a,v)
              ^AlgShellSort:16: error: not found: value v
    setValeur(a,v)
                ^