sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  for (i<- 1 to getNombreValeurs()-1){
    var ecart=i/2
    while (ecart>0){
     	var v=getValeur(i)
    	var a=i
      if (a-ecart<0){
        ecart=ecart/2
      }
   		else if (getValeur(a-ecart)>v){
      copie(a-ecart,a)
      a-=ecart
    	}
    }
    setValeur(a,v)
  }
}